--- a/src/gridLayout/Login/RegisterGrid.html
+++ b/src/gridLayout/Login/RegisterGrid.html
@@ -69,8 +69,8 @@
 
       <div class="login-panel">
         <div class="login-title">
-          <div class="login-title-label">Log in</div>
-          <div class="login-subtitle">Use a local account to log in</div>
+          <div class="login-title-label">Register</div>
+          <div class="login-subtitle">Create a new account</div>
         </div>
         <div class="form">
           <div class="input-container">
@@ -81,20 +81,18 @@
             <div class="input-label">Password</div>
             <input type="password" placeholder="Password" class="input-box" />
           </div>
-          <div class="remember-container">
-            <input type="checkbox" class="checkbox" />
-            <div class="remember">Remember me?</div>
+          <div class="input-container">
+            <div class="input-label">Confirm Password</div>
+            <input
+              type="password"
+              placeholder="Confirm Password"
+              class="input-box"
+            />
           </div>
         </div>
         <div class="log-wrapper">
           <div class="log-container">
-            <button class="place-order-btn log-btn">Log in</button>
-          </div>
-          <div class="link-container">
-            <a class="forgot">Forgot your password?</a>
-            <a href="./RegisterGrid.html" class="register"
-              >Register as a user</a
-            >
+            <button class="place-order-btn log-btn">Register</button>
           </div>
         </div>
       </div>
